[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/WarpDriveControlPanel.gd" type="Script" id=1]

[node name="WarpDriveControlPanel" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockBeltButton" type="Button" parent="Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 32.0
text = "Lock Belt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockHomeButton" type="Button" parent="Panel"]
margin_left = 104.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 32.0
text = "Lock Home"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpButton" type="Button" parent="Panel"]
margin_left = 56.0
margin_top = 40.0
margin_right = 152.0
margin_bottom = 80.0
text = "> JUMP <"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/LockBeltButton" to="." method="_on_LockBeltButton_pressed"]
[connection signal="pressed" from="Panel/LockHomeButton" to="." method="_on_LockHomeButton_pressed"]
[connection signal="pressed" from="Panel/JumpButton" to="." method="_on_JumpButton_pressed"]
